--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,9 +14,13 @@ html {
     /*overall fontsize of the project*/
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow: hidden;
+    height: 100%;
 }
 
 body {
+    overflow: auto;
+    height: 100%;
     font-family: 'Lato', sans-serif !important;
     font-weight: 300;
 }
@@ -255,6 +259,8 @@ body.about {
 }
 
 .game_tile {
+    width: 256px;
+    height: 256px;
     margin-right: 12px;
     margin-left: 12px;
     margin-bottom: 10px;
